--- a/graph-analysis-web/src/main/resources/application.properties
+++ b/graph-analysis-web/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=dev
+spring.profiles.active=test
 spring.application.name=graph-analysis
 
 # MVC
@@ -24,7 +24,7 @@ logging.file=graph-analysis-log.log
 # Mail
 spring.mail.default-encoding=UTF-8
 spring.mail.protocol=stmp
-spring.mail.host=
-spring.mail.username=
-spring.mail.password=
+spring.mail.host=stmp.qq.com
+spring.mail.username=sdf
+spring.mail.password=sdf
 
